<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/setting_linear">

    <include layout="@layout/title_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_gray"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_safe"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/app_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_setting_safe_title"
                    android:textColor="@color/my_common" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/my_common" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/icon_my_right" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tongzhi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/app_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_setting_blacklist_title"
                    android:textColor="@color/my_common" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/my_common" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/icon_my_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/app_gray"></View>

            <LinearLayout
                android:id="@+id/yinsi"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/app_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_setting_push_title"
                    android:textColor="@color/my_common" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/my_common" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/icon_my_right" />

            </LinearLayout>





            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/app_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_setting_help_title"
                    android:textColor="@color/my_common" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/my_common" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/icon_my_right" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/app_gray"></View>

            <LinearLayout
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/app_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/my_setting_about_title"
                    android:textColor="@color/my_common" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/my_common" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="20dp"
                    android:background="@mipmap/icon_my_right" />

            </LinearLayout>

            <Button
                android:id="@+id/exit_login"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="退出登录" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>